# sync_tool

./: LICENSE.md  README.md  pyproject.toml
sync_tool/: cli.py  config.py  hash.py  s3.py  transfer.py
tests/: base_test_framework.py  test_cli.py  test_config.py  test_hash.py  test_s3.py  test_sync_tool.py  test_transfer.py
tests/fixtures/: config.json
tests/fixtures/mock_bucket/things/: file_b.txt
tests/fixtures/mock_local/stuff/: file_a.txt
